--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.Pimp {
+  background-color: transparent;
+  /* fill in l8r */
+}
+
+.TwitchGlitch {
+  display: inline;
+  height: 40px;
+}
